objects/Contact.object
<CustomObject>
    <fields>
        <fullName>EventRegistrationType__c</fullName>
        <description>Integrates to CVent's Contact Type field; set by process builder</description>
        <label>Event Registration Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FactFinder__c</fullName>
        <description>Values derived from the field "Fact Finder Value".</description>
        <formula>IF(OR(ISPICKVAL(KolbeFactFinder__c, "1"), ISPICKVAL(KolbeFactFinder__c, "2"), ISPICKVAL(KolbeFactFinder__c, "3")), "Simplify the Fund",  

IF(OR(ISPICKVAL(KolbeFactFinder__c, "4"), ISPICKVAL(KolbeFactFinder__c, "5"), ISPICKVAL(KolbeFactFinder__c, "6")), "Bullets on the Fund",  

IF(OR(ISPICKVAL(KolbeFactFinder__c, "7"), ISPICKVAL(KolbeFactFinder__c, "8"), ISPICKVAL(KolbeFactFinder__c, "9"), ISPICKVAL(KolbeFactFinder__c, "10")), "Get into the Weeds", NULL)))</formula>
        <inlineHelpText>How much information/details do they need to be comfortable in making a decision?</inlineHelpText>
        <label>Fact Finder</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FamilyNames__c</fullName>
        <description>Profile field to record family member names associated to the Contact.</description>
        <label>Family Names</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinalExpenseTotal__c</fullName>
        <description>Concur Custom field not exposed in the UI</description>
        <label>Final/Paid Expense Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Financial_Account_Access__c</fullName>
        <description>Number of Financial Accounts this contact has access to via the eStatement community.  Maintained by Declarative Rollup  https://globalplatform.my.salesforce.com/a0m2A00000IfrNU (Status__c = 'Current' and View_Financial_Account_in_Community__c = TRUE)</description>
        <inlineHelpText>Number of Financial Accounts this contact has access to via the eStatement community</inlineHelpText>
        <label>Financial Account Access</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FirmBranchID15__c</fullName>
        <description>Custom field to easily view the SFDC 15 character unique ID</description>
        <formula>Account.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Firm/Branch ID 15</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirmBranchID18__c</fullName>
        <description>Custom field to easily view the SFDC 18 character unique ID</description>
        <formula>CASESAFEID( Account.Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Firm/Branch ID 18</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirmNameText__c</fullName>
        <description>Used in sharing rules because formula fields and lookups cannot be used.</description>
        <label>Firm Name Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirmOfficeName__c</fullName>
        <description>Parent Account name when viewing a child account</description>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Firm/Office Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirmResearch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Added as a profile field to support the Greater Texas Pilot</description>
        <label>Firm Research</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FirmTopContact__c</fullName>
        <description>Integrated from EDW</description>
        <label>Firm Top Contact</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FirmType__c</fullName>
        <description>Source: MARS na_load_rep.FirmType
Loaded by a nightly job. Data Flow: Mars -&gt; SF</description>
        <label>Firm Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ADU BANK TRUST</fullName>
                    <color>#0B6FCE</color>
                    <label>ADU BANK TRUST</label>
                </value>
                <value>
                    <fullName>ASSET MGR</fullName>
                    <color>#78C953</color>
                    <label>ASSET MGR</label>
                </value>
                <value>
                    <fullName>BACK OFFICE</fullName>
                </value>
                <value>
                    <fullName>BACK OFFICE IND</fullName>
                </value>
                <value>
                    <fullName>BACK OFFICE WHSE</fullName>
                </value>
                <value>
                    <fullName>BANK TRUST B</fullName>
                    <color>#F3D904</color>
                    <label>BANK TRUST B</label>
                </value>
                <value>
                    <fullName>BANK TRUST PW</fullName>
                </value>
                <value>
                    <fullName>BROKER DEALER B</fullName>
                    <color>#66E9BD</color>
                    <label>BROKER DEALER B</label>
                </value>
                <value>
                    <fullName>BROKER DEALER PW</fullName>
                </value>
                <value>
                    <fullName>CLEARING</fullName>
                    <color>#419249</color>
                    <label>CLEARING</label>
                </value>
                <value>
                    <fullName>CONSULTANT</fullName>
                    <color>#B6E32E</color>
                    <label>CONSULTANT</label>
                </value>
                <value>
                    <fullName>DCIO</fullName>
                    <color>#641CCF</color>
                    <label>DCIO</label>
                </value>
                <value>
                    <fullName>DC PLATFORM</fullName>
                </value>
                <value>
                    <fullName>DIRECT H</fullName>
                    <color>#0B6FCE</color>
                    <label>DIRECT H</label>
                </value>
                <value>
                    <fullName>DIRECT L</fullName>
                    <color>#E27001</color>
                    <label>DIRECT L</label>
                </value>
                <value>
                    <fullName>DIRECT N</fullName>
                    <color>#F3D904</color>
                    <label>DIRECT N</label>
                </value>
                <value>
                    <fullName>DIRECT O</fullName>
                    <color>#A53711</color>
                    <label>DIRECT O</label>
                </value>
                <value>
                    <fullName>DIRECT W</fullName>
                </value>
                <value>
                    <fullName>EDJ</fullName>
                </value>
                <value>
                    <fullName>FDU ADU</fullName>
                </value>
                <value>
                    <fullName>FIDUCIARY FOCUS</fullName>
                    <color>#419249</color>
                    <label>FIDUCIARY FOCUS</label>
                </value>
                <value>
                    <fullName>INDEPENDENT BD A</fullName>
                    <color>#B6E32E</color>
                    <label>INDEPENDENT BD A</label>
                </value>
                <value>
                    <fullName>INDEPENDENT BD B</fullName>
                    <color>#641CCF</color>
                    <label>INDEPENDENT BD B</label>
                </value>
                <value>
                    <fullName>INDEPENDENT BD C</fullName>
                    <color>#F96FB7</color>
                    <label>INDEPENDENT BD C</label>
                </value>
                <value>
                    <fullName>INDEPENDENT BD D</fullName>
                    <color>#2F5D85</color>
                    <label>INDEPENDENT BD D</label>
                </value>
                <value>
                    <fullName>INSTITUTIONAL A</fullName>
                    <color>#8F6429</color>
                    <label>INSTITUTIONAL A</label>
                </value>
                <value>
                    <fullName>INSTITUTIONAL P</fullName>
                    <color>#57F17C</color>
                    <label>INSTITUTIONAL P</label>
                </value>
                <value>
                    <fullName>INSTITUTIONAL PW</fullName>
                </value>
                <value>
                    <fullName>INTNL GKA</fullName>
                    <color>#0B6FCE</color>
                    <label>INTNL GKA</label>
                </value>
                <value>
                    <fullName>N/A</fullName>
                    <color>#419249</color>
                    <label>N/A</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Firm_Office_Firm_Type_different__c</fullName>
        <description>Formula field to easily identify if the Contact firm type is different than the related office firm type</description>
        <formula>IF(TEXT(FirmType__c )  &lt;&gt;   TEXT( Account.FirmType__c ) , TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Firm Office Firm Type different?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Firm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up to the related Firm record</description>
        <label>Firm</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Offices Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FirstSaleDate__c</fullName>
        <description>Source: MARS na_load_rep.FirstSaleDate
Loaded by a nightly job. Data Flow: Mars -&gt; SF</description>
        <label>First Sale Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FocusFirmADU_IDU__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Advisor &amp; Institutional Distribution Unit Focus Firm indicator</description>
        <inlineHelpText>Advisor &amp; Institutional Distribution Unit Focus Firm indicator</inlineHelpText>
        <label>Focus Firm</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FocusFirmFS__c</fullName>
        <description>Custom field no longer used</description>
        <formula>Account.Parent.FocusFirmFS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Focus Firm FS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FocusFirmIAG__c</fullName>
        <description>Custom field no longer used</description>
        <formula>Account.Parent.FocusFirmIAG__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Focus Firm IAG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FocusFirmRS__c</fullName>
        <description>Custom field no longer used</description>
        <formula>Account.Parent.FocusFirmRS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Focus Firm RS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FocusFirmWHSE__c</fullName>
        <description>Custom field no longer used</description>
        <formula>Account.Parent.FocusFirmWHSE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Focus Firm WHSE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FollowThrough__c</fullName>
        <description>Values derived from the field "Follow Through Value".</description>
        <formula>IF(OR(ISPICKVAL(KolbeFollowThrough__c, "1"), ISPICKVAL(KolbeFollowThrough__c, "2"), ISPICKVAL(KolbeFollowThrough__c, "3")), "Call!", 

IF(OR(ISPICKVAL(KolbeFollowThrough__c, "4"), ISPICKVAL(KolbeFollowThrough__c, "5"), ISPICKVAL(KolbeFollowThrough__c, "6")), "Open to Calls", 

IF(OR(ISPICKVAL(KolbeFollowThrough__c, "7"), ISPICKVAL(KolbeFollowThrough__c, "8"), ISPICKVAL(KolbeFollowThrough__c, "9"), ISPICKVAL(KolbeFollowThrough__c, "10")), "Schedule Calls", NULL)))</formula>
        <inlineHelpText>How do they go about getting things done?  Do they follow a strict process/schedule and not like to be interrupted?</inlineHelpText>
        <label>Follow Through</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FullName__c</fullName>
        <description>Formula to concatenate First &amp; Last Name</description>
        <formula>HYPERLINK("/"&amp; Id, FirstName+' '+LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name Custom</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FullServiceConsultant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Populated by an evening job and a look up to the User record of the contacts PRCG Consultant</description>
        <label>Full Service Consultant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FullServiceConsultant</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FullServiceSalesUserEmail__c</fullName>
        <description>Formula field that displays the Full Service Sales User look up field user’s Email Address from their user record as text.</description>
        <formula>FullServiceSalesUser__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Service Sales User Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FullServiceSalesUserPardot__c</fullName>
        <description>Formula field that displays the FullServiceSalesUser look up field user’s first name and last name as text</description>
        <formula>FullServiceSalesUser__r.FirstName &amp; " " &amp;  FullServiceSalesUser__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Service Sales User Pardot</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FullServiceSalesUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Populated with an evening job with Wholesaler 1 that is related to the Primary Sales Users Territory.</description>
        <label>Full Service Sales User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FullServiceSalesUser</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Full_Name_Plain__c</fullName>
        <description>Giving you Contact's full name as plain text, first name + last name</description>
        <formula>FirstName &amp; " " &amp; LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name (Plain)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Service_Checklist__c</fullName>
        <description>Used in the PRCG profile section to separate the Full Service Checklist fields from other PRCG related fields</description>
        <label>Full Service Checklist</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Service_Consultant_Pardot__c</fullName>
        <description>To be used for personalization in Pardot.  The look up field displays the ID as a variable tag and not the text.</description>
        <formula>FullServiceConsultant__r.FirstName  &amp; " " &amp;  FullServiceConsultant__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Service Consultant Pardot</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCIntegrationID__c</fullName>
        <description>Populated with the Global Connect Salesforce Row ID if part of the Global Connect integration</description>
        <externalId>true</externalId>
        <label>GC Integration ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GlobalConnectId__c</fullName>
        <description>Global Connect Salesforce ID</description>
        <externalId>true</externalId>
        <label>Global Connect Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Holiday__c</fullName>
        <description>This field is updated by users to track who to send a holiday card and/or gift.</description>
        <inlineHelpText>Use this field to track if you send a holiday card and/or gift to the Rep/Contact.</inlineHelpText>
        <label>Holiday</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Card</fullName>
                </value>
                <value>
                    <fullName>Card and Gift</fullName>
                </value>
                <value>
                    <fullName>Gift</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HomeOfficeContact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flagged records are used in the Home RCDU sharing rules. Populated by Process Builder.</description>
        <label>Home Office Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Implementer__c</fullName>
        <description>Values derived from the field "Implementor Value".</description>
        <formula>IF(OR(ISPICKVAL(KolbeImplementor__c, "1"), ISPICKVAL(KolbeImplementor__c, "2"), ISPICKVAL(KolbeImplementor__c, "3")), "Envisions", 

IF(OR(ISPICKVAL(KolbeImplementor__c, "4"), ISPICKVAL(KolbeImplementor__c, "5"), ISPICKVAL(KolbeImplementor__c, "6")), "Tinkers/Fixes", 

IF(OR(ISPICKVAL(KolbeImplementor__c, "7"), ISPICKVAL(KolbeImplementor__c, "8"), ISPICKVAL(KolbeImplementor__c, "9"), ISPICKVAL(KolbeImplementor__c, "10")), "Works With Hands", NULL)))</formula>
        <inlineHelpText>How do they physically interact with the world?  Doesn’t really apply to investments, but anyone who Acts/Reacts in this category may be into the outside/golfing/home projects etc….</inlineHelpText>
        <label>Implementer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InactiveReason__c</fullName>
        <description>A Profile field to allow sales users to identify Contacts that are no longer active and select a pick list reason. Data Ops reviews these and sets the Contact to Inactive in MARS.</description>
        <label>Inactive Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Deceased</fullName>
                </value>
                <value>
                    <fullName>Invalid Prospect</fullName>
                </value>
                <value>
                    <fullName>Left Industry/Business</fullName>
                </value>
                <value>
                    <fullName>Not FINRA Registered</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InitiateEmailOptIn__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, sets Email Opt-out to false and initiates an automation rule in Pardot.  Pardot will uncheck after automation rule completes.</description>
        <inlineHelpText>Only check if the client has opted-out or snoozed and specifically requested opt-in. Contact will be sent Pref Center email within 20 minutes.  Your selection is tracked for compliance reasons.</inlineHelpText>
        <label>Initiate Email Opt-In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InvalidEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flagged Yes with the integration from Aprimo if the email had a hard bounce. Flag removed manually when the email address is updated.</description>
        <inlineHelpText>Update the Rep/Contact's email address to automatically remove the Invalid Email flag. This flag is set when the Rep/Contact is sent a marketing email and it hard bounces.</inlineHelpText>
        <label>Invalid Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InvestmentStrategyNewsletter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Displayed in the PRCG Profile Section</description>
        <inlineHelpText>Checked indicates the client will receive the monthly Portfolio Clarity Investment Committee Newsletter and will be sent through the Marketing/Pardot system.  Deliverable: 5th business day.</inlineHelpText>
        <label>Investment Committee Allocations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InvitedByEmail__c</fullName>
        <description>Field updated when a Sales user associates a Contact to a Campaign</description>
        <formula>InvitedBy__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invited By Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InvitedByFirstName__c</fullName>
        <description>Field updated when a Sales user associates a Contact to a Campaign</description>
        <formula>InvitedBy__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invited By First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InvitedByLastName__c</fullName>
        <description>Field updated when a Sales user associates a Contact to a Campaign</description>
        <formula>InvitedBy__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invited By Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InvitedByPersonalizationText__c</fullName>
        <description>Field updated when a Sales user associates a Contact to a Campaign</description>
        <label>Invited By Personalization Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>InvitedByPhone__c</fullName>
        <description>Field updated when a Sales user associates a Contact to a Campaign</description>
        <formula>InvitedBy__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invited By Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InvitedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user who invited the person to an event.  Note this is filled by a process builder that fires with each insert into Campaign Member.  It represents the most recent add to Campaign Member for this individual.  Synced to Pardot for event emails.</description>
        <label>Invited By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>InvitedContacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsMarsRepId__c</fullName>
        <description>Checkbox which is TRUE if the MARS Rep ID text value is a number</description>
        <formula>ISNUMBER(MarsRepId__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsMarsRepId</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KolbeFactFinder__c</fullName>
        <description>Data loaded by DAT on a monthly basis</description>
        <label>Fact Finder Value</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KolbeFollowThrough__c</fullName>
        <description>Data loaded by DAT on a monthly basis</description>
        <label>Follow Through Value</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KolbeImplementor__c</fullName>
        <description>Data loaded by DAT on a monthly basis</description>
        <label>Implementor Value</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KolbeIndex__c</fullName>
        <description>It concatenates the Fact Finder Value, Follow Through Value, Quick Start Value and Implementor Value Fields</description>
        <formula>"FactFinder = "&amp; TEXT(KolbeFactFinder__c)&amp; ", FollowThrough = "&amp; TEXT( KolbeFollowThrough__c)&amp; ", QuickStart = "&amp; TEXT(KolbeQuickStart__c)&amp; ", Implementer = "&amp; TEXT(KolbeImplementor__c)</formula>
        <inlineHelpText>It displays Fact Finder Value, Follow Through Value, Quick Start Value and Implementor Value.</inlineHelpText>
        <label>Kolbe Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KolbeQuickStart__c</fullName>
        <description>Data loaded by DAT on a monthly basis</description>
        <label>Quick Start Value</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LastCallDate__c</fullName>
        <description>Filter to display a date based only on Call, this data is populated by this DLRS: https://globalplatform.my.salesforce.com/a0mF000000Agn0r</description>
        <label>Last Call Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastCallMeetingDate__c</fullName>
        <description>Formula field displaying the Last Call or Meeting date based on the LastCallDate__c &amp; LastMeetingDate__c field values.</description>
        <formula>if (isnull(LastCallDate__c),LastMeetingDate__c,
if (isnull(LastMeetingDate__c),LastCallDate__c,
If(LastCallDate__c  &gt; LastMeetingDate__c,  LastCallDate__c, LastMeetingDate__c)
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Call/Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastCampaignActivity__c</fullName>
        <description>This field was created as part of the Digital Selling Scoring Project.
Date field populates with Today's Date every time the Activity Campaign field is updated IF the Last Campaign Activity field is blank or IF the Last Campaign Activity date is less than or equal to the last 7 days.</description>
        <label>Last Campaign Activity</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastEmailContact__c</fullName>
        <description>Tracks the date of the most recent Email- / EmailProductPromotional activity created for the associated Rep/Contact. this data is populated by this DLRS: https://globalplatform.my.salesforce.com/a0mF000000Di49s</description>
        <inlineHelpText>Tracks the date of the most recent Email / Product Promotional activity created for the associated Rep/Contact.</inlineHelpText>
        <label>Last Email Product Promotional Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastMeetingDate__c</fullName>
        <description>This date is populated by this DLRS : https://globalplatform.my.salesforce.com/a0mF000000Agn0s (TypeGroup__c like 'Meeting%' and Status__c='Completed')</description>
        <label>Last Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastPRCGCaseCompletedDate__c</fullName>
        <description>This date is populated by this DLRS : https://globalplatform.my.salesforce.com/a0mF000000Cbs4K (Case where Status = 'Completed' and Origin = 'Artemus' and Type = 'Comprehensive Portfolio Evaluation')
which is called by this trigger https://globalplatform.my.salesforce.com/01qF0000000WMrz</description>
        <inlineHelpText>Date Last PRCG Case was completed</inlineHelpText>
        <label>Last PRCG Case Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastPRCGOpenCaseDate__c</fullName>
        <description>This date is populated by this DLRS : https://globalplatform.my.salesforce.com/a0mF000000Cbs58 (Case where Status != 'Completed' and Status !='Cancelled' and Origin = 'Artemus' and Type = 'Comprehensive Portfolio Evaluation')  which is called by this trigger /a0mF000000Cbs58</description>
        <label>Last PRCG Open Case Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastPRCGProcessDate__c</fullName>
        <description>This date is populated by this DLRS :https://globalplatform.my.salesforce.com/a0mF000000Agn0t (Type__c like 'Analytics%' and Status__c='Completed')</description>
        <inlineHelpText>Date that the most recent Comprehensive Portfolio Evaluation request was completed.</inlineHelpText>
        <label>Last PRCG Process Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastSaleDate__c</fullName>
        <description>Source: MARS na_load_rep.LastSaleDate
Loaded by a nightly job. Data Flow: Mars -&gt; SF</description>
        <label>Last Sale Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LeadershipExchangeIcon__c</fullName>
        <description>N/A No longer used in layouts</description>
        <formula>if( CONTAINS(LeadershipExchange__c , text(year(today())-1)),IMAGE("/img/icon/trophy24.png" , "red", 16, 16)&amp; ' ' &amp; LeadershipExchange__c ,"")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Leadership Exchange</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadershipExchange__c</fullName>
        <description>N/A No longer used in layouts</description>
        <inlineHelpText>Indicates that the Rep/Contact was included in the Leadership Exchange program for the year(s) displayed.</inlineHelpText>
        <label>Leadership Exchange</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>N/A No longer used, Originally for Geolocation.</description>
        <label>Location</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
</CustomObject>